--- a/frontend/src/app/shared/components/project/project.component.html
+++ b/frontend/src/app/shared/components/project/project.component.html
@@ -1,7 +1,7 @@
 <div>
   <mat-toolbar>
     <mat-form-field
-      *forRoles="[role.ADMIN]"
+      *forRoles="[role.ADMIN, role.MANAGER]"
       class="flex-fill"
       appearance="fill"
       [hideRequiredMarker]="true"
