--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -13,7 +13,7 @@
     <a routerLink="/bills">Bills</a>
     <a routerLink="/projects">Projects</a>
     <a *forRoles="[role.ADMIN]" routerLink="/users">Users</a>
-    <a routerLink="/user">User</a>
+    <a [routerLink]="['/user', userId]">User</a>
     <button (click)="signOut()">Sign out</button>
   </div>
 </header>
