--- a/frontend/src/app/shared/components/calendar/calendar.component.html
+++ b/frontend/src/app/shared/components/calendar/calendar.component.html
@@ -14,7 +14,10 @@
   <div class="demo-app-main">
     <div *forRoles="[role.ADMIN, role.MANAGER]">
       <div class="scrollable-tab-container">
-        <mat-tab-group (selectedTabChange)="onTabChanged($event)">
+        <mat-tab-group
+          (selectedTabChange)="onTabChanged($event)"
+          [color]="'accent'"
+        >
           <mat-tab *ngFor="let user of userIdNameDTOs" label="{{ user.name }}">
           </mat-tab>
         </mat-tab-group>
