fix: fix pagination for users

--- a/frontend/src/app/shared/components/user/users-list/users-list.component.html
+++ b/frontend/src/app/shared/components/user/users-list/users-list.component.html
@@ -87,7 +87,7 @@
   </mat-table>
 
   <mat-paginator
-    [length]="users.length"
+    [length]="totalElements"
     [pageSize]="pageSize"
     [pageIndex]="currentPage - 1"
     (page)="pageChanged($event)"
