--- a/frontend/src/app/shared/components/bill/bill.component.html
+++ b/frontend/src/app/shared/components/bill/bill.component.html
@@ -1,1 +1,70 @@
-<p>Bills page is under construction!</p>
+<div>
+  <mat-toolbar>
+    <mat-form-field class="w-100" appearance="fill" color="primary">
+      <mat-label>Date range:</mat-label>
+      <mat-date-range-input
+        [min]="minStartDate"
+        [max]="maxStartDate"
+        [rangePicker]="picker"
+        formControlName="dateRange"
+        (dateChange)="onSubmitSelect()"
+      >
+        <input matStartDate placeholder="Start date" />
+        <input matEndDate placeholder="End date" />
+      </mat-date-range-input>
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-date-range-picker #picker></mat-date-range-picker>
+    </mat-form-field>
+    <mat-form-field
+      class="w-100"
+      appearance="fill"
+      color="primary"
+      [hideRequiredMarker]="true"
+    >
+      <mat-label>Bill type:</mat-label>
+      <mat-select
+        id="billType"
+        formControlName="billType"
+        (selectionChange)="onSubmitSelect()"
+      >
+        <mat-option *ngFor="let billType of billTypes" [value]="billType">
+          {{ billType }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field
+      class="w-100"
+      appearance="fill"
+      [hideRequiredMarker]="true"
+      *forRoles="role.ADMIN"
+    >
+      <mat-label>User:</mat-label>
+      <mat-select
+        id="user"
+        formControlName="user"
+        (selectionChange)="onSubmitSelect()"
+      >
+        <mat-option *ngFor="let user of usersSelect" [value]="user">
+          {{ user.fullName }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </mat-toolbar>
+  <div class="content">
+    <div class="overflow-auto gap">
+      <div *ngFor="let bill of bills"></div>
+      <div class="w-100" *ngIf="!bills.length">
+        <app-no-data-message
+          message="You don't have any bills"
+        ></app-no-data-message>
+      </div>
+    </div>
+  </div>
+  <mat-paginator
+    *ngIf="totalElements > 0"
+    [length]="totalElements"
+    [pageSize]="pageSize"
+    [pageIndex]="currentPage - 1"
+    (page)="pageChanged($event)"
+  ></mat-paginator>
+</div>
