--- a/frontend/src/app/shared/components/calendar/calendar.component.html
+++ b/frontend/src/app/shared/components/calendar/calendar.component.html
@@ -1,7 +1,7 @@
 <div class="demo-app">
   <div class="demo-app-sidebar">
     <div class="demo-app-sidebar-section">
-      <h2>All Events ({{ currentEvents.length }})</h2>
+      <h2>All Events ({{ currentEvents().length }})</h2>
       <ul>
         <li *ngFor="let event of currentEvents()">
           <b>{{ event.startStr }}</b>
