--- a/frontend/src/app/shared/components/bill/bill.component.css
+++ b/frontend/src/app/shared/components/bill/bill.component.css
@@ -1,14 +1,15 @@
-.mat-toolbar {
+mat-toolbar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #2c2c2c;
-  color: white;
 }
 
-.overflow-auto {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+mat-toolbar form {
+  width: 100%;
 }
 
 mat-form-field {
+  width: 33%;
   margin-top: 20px;
 }
