--- a/frontend/src/app/shared/components/bill/bill.component.html
+++ b/frontend/src/app/shared/components/bill/bill.component.html
@@ -1,55 +1,56 @@
 <div>
   <mat-toolbar>
-    <mat-form-field class="w-100" appearance="fill" color="primary">
-      <mat-label>Date range:</mat-label>
-      <mat-date-range-input
-        [min]="minStartDate"
-        [max]="maxStartDate"
-        [rangePicker]="picker"
-        formControlName="dateRange"
-        (dateChange)="onSubmitSelect()"
-      >
-        <input matStartDate placeholder="Start date" />
-        <input matEndDate placeholder="End date" />
-      </mat-date-range-input>
-      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-date-range-picker #picker></mat-date-range-picker>
-    </mat-form-field>
-    <mat-form-field
-      class="w-100"
-      appearance="fill"
-      color="primary"
-      [hideRequiredMarker]="true"
-      *forRoles="role.ADMIN"
-    >
-      <mat-label>Bill type:</mat-label>
-      <mat-select
-        id="billType"
-        formControlName="billType"
-        (selectionChange)="onSubmitSelect()"
-      >
-        <mat-option *ngFor="let billType of billTypes" [value]="billType">
-          {{ billType }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-    <mat-form-field
-      class="w-100"
-      appearance="fill"
-      [hideRequiredMarker]="true"
-      *forRoles="role.ADMIN"
-    >
-      <mat-label>User:</mat-label>
-      <mat-select
-        id="user"
-        formControlName="user"
-        (selectionChange)="onSubmitSelect()"
-      >
-        <mat-option *ngFor="let user of userIdNameDTOs" [value]="user">
-          {{ user.name }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+    <form [formGroup]="billForm">
+      <mat-form-field>
+        <mat-label>Date range:</mat-label>
+        <mat-date-range-input
+          id="dateRange"
+          [min]="minStartDate"
+          [max]="maxStartDate"
+          [rangePicker]="picker"
+        >
+          <input
+            matStartDate
+            formControlName="start"
+            placeholder="Start date"
+          />
+          <input
+            matEndDate
+            formControlName="end"
+            placeholder="End date"
+            (dateChange)="onSubmitSelect()"
+          />
+        </mat-date-range-input>
+        <mat-datepicker-toggle matSuffix [for]="picker">
+          <mat-icon matDatepickerToggleIcon>arrow_drop_down</mat-icon>
+        </mat-datepicker-toggle>
+        <mat-date-range-picker #picker></mat-date-range-picker>
+      </mat-form-field>
+      <mat-form-field [hideRequiredMarker]="true" *forRoles="role.ADMIN">
+        <mat-label>Bill type:</mat-label>
+        <mat-select
+          id="billType"
+          formControlName="billType"
+          (selectionChange)="onSubmitSelect()"
+        >
+          <mat-option *ngFor="let billType of billTypes" [value]="billType">
+            {{ billType }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field [hideRequiredMarker]="true" *forRoles="role.ADMIN">
+        <mat-label>User:</mat-label>
+        <mat-select
+          id="user"
+          formControlName="user"
+          (selectionChange)="onSubmitSelect()"
+        >
+          <mat-option *ngFor="let user of userIdNameDTOs" [value]="user">
+            {{ user.name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </form>
   </mat-toolbar>
   <div class="content">
     <div class="overflow-auto gap">
