feat: implement bill display

--- a/frontend/src/app/shared/components/bill/bill.component.css
+++ b/frontend/src/app/shared/components/bill/bill.component.css
@@ -13,3 +13,16 @@ mat-form-field {
   width: 33%;
   margin-top: 20px;
 }
+
+.bill-table {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.download-column,
+.regenerate-column {
+  flex: 0 0 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
