--- a/frontend/src/app/shared/components/bill/bill.component.html
+++ b/frontend/src/app/shared/components/bill/bill.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="bill-container">
   <mat-toolbar>
     <form [formGroup]="billForm">
       <mat-form-field>
@@ -52,26 +52,80 @@
       </mat-form-field>
     </form>
   </mat-toolbar>
-  <div class="content">
-    <div class="overflow-auto gap">
-      <div *ngFor="let bill of bills">
-        <div class="bill-details">
-          <span class="bill-name">{{ bill.filename }}</span>
-          <span class="date-range"
-            >{{ bill.startDate | date }} - {{ bill.endDate | date }}</span
+  <div class="w-100" *ngIf="!bills.length">
+    <app-no-data-message
+      message="You don't have any bills"
+    ></app-no-data-message>
+  </div>
+  <div *ngIf="bills.length" class="bill-table">
+    <mat-table [dataSource]="bills">
+      <ng-container matColumnDef="name">
+        <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+        <mat-cell *matCellDef="let bill">{{ bill.filename }} </mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="date range">
+        <mat-header-cell *matHeaderCellDef> Date range </mat-header-cell>
+        <mat-cell *matCellDef="let bill"
+          >{{ bill.startDate | date }} - {{ bill.endDate | date }}
+        </mat-cell>
+      </ng-container>
+
+      <ng-container *forRoles="role.ADMIN" matColumnDef="user">
+        <mat-header-cell *matHeaderCellDef> User </mat-header-cell>
+        <mat-cell *matCellDef="let bill">{{ bill.userName }} </mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="download">
+        <mat-header-cell *matHeaderCellDef class="download-column">
+        </mat-header-cell>
+        <mat-cell *matCellDef="let bill" class="download-column">
+          <button
+            mat-icon-button
+            (click)="downloadBill(bill)"
+            matTooltip="Download"
           >
-          <span *forRoles="role.ADMIN">User: {{ bill.userId }}</span>
-        </div>
-        <div class="bill-actions">
-          <button mat-button (click)="downloadBill(bill)">Download</button>
-          <button mat-button (click)="regenerateBill(bill)">Regenerate</button>
-        </div>
-      </div>
-      <div class="w-100" *ngIf="!bills.length">
-        <app-no-data-message
-          message="You don't have any bills"
-        ></app-no-data-message>
-      </div>
-    </div>
+            <mat-icon>download</mat-icon>
+          </button>
+        </mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="regenerate">
+        <mat-header-cell *matHeaderCellDef class="regenerate-column">
+        </mat-header-cell>
+        <mat-cell *matCellDef="let bill" class="regenerate-column">
+          <button
+            mat-icon-button
+            (click)="regenerateBill(bill)"
+            matTooltip="Regenerate"
+          >
+            <mat-icon>replay</mat-icon>
+          </button>
+        </mat-cell>
+      </ng-container>
+
+      <mat-header-row
+        *matHeaderRowDef="[
+          'name',
+          'date range',
+          'user',
+          'download',
+          'regenerate'
+        ]"
+      ></mat-header-row>
+      <mat-row
+        *matRowDef="
+          let row;
+          columns: ['name', 'date range', 'user', 'download', 'regenerate']
+        "
+      ></mat-row>
+    </mat-table>
+
+    <mat-paginator
+      [length]="totalElements"
+      [pageSize]="pageSize"
+      [pageIndex]="currentPage - 1"
+      (page)="pageChanged($event)"
+    ></mat-paginator>
   </div>
 </div>
