--- a/frontend/src/app/shared/components/user/user-profile/user.component.html
+++ b/frontend/src/app/shared/components/user/user-profile/user.component.html
@@ -52,34 +52,50 @@
     </div>
     <div class="user-field">
       <label>Roles:</label>
-      <div>{{ user.userRoles.join(", ") }}</div>
+      <div *ngIf="!isEditing">{{ user.userRoles.join(", ") }}</div>
+      <ng-container *ngIf="isEditing">
+        <select
+          *forRoles="role.ADMIN"
+          formControlName="userRoles"
+          id="userRoles"
+          multiple
+        >
+          <option *ngFor="let userRole of roles" [value]="userRole">
+            {{ userRole }}
+          </option>
+        </select>
+      </ng-container>
     </div>
     <div class="user-field">
       <label>Type of contract:</label>
       <div *ngIf="!isEditing">{{ user.formOfContract }}</div>
-      <select
-        *ngIf="isEditing"
-        formControlName="formOfContract"
-        id="formOfContract"
-      >
-        <option
-          *ngFor="let formOfContract of formOfContracts"
-          [value]="formOfContract"
+      <ng-container *ngIf="isEditing">
+        <select
+          *forRoles="role.ADMIN"
+          formControlName="formOfContract"
+          id="formOfContract"
         >
-          {{ formOfContract }}
-        </option>
-      </select>
+          <option
+            *ngFor="let formOfContract of formOfContracts"
+            [value]="formOfContract"
+          >
+            {{ formOfContract }}
+          </option>
+        </select>
+      </ng-container>
     </div>
     <div class="user-field">
       <label>Hourly rate:</label>
       <div *ngIf="!isEditing">{{ user.hourlyRate }}</div>
-      <input
-        type="number"
-        *ngIf="isEditing"
-        formControlName="hourlyRate"
-        id="hourlyRate"
-        placeholder="hourlyRate"
-      />
+      <ng-container *ngIf="isEditing">
+        <input
+          *forRoles="role.ADMIN"
+          type="number"
+          formControlName="hourlyRate"
+          id="hourlyRate"
+          placeholder="hourlyRate"
+        />
+      </ng-container>
     </div>
   </form>
   <ng-container *ngIf="isEditing">
